--- a/LoginSample/App.xaml
+++ b/LoginSample/App.xaml
@@ -1,43 +1,51 @@
 ﻿<Application x:Class="LoginSample.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/LoginView.xaml">
+             StartupUri="/Views/LoginView.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/SampleUI;component/Themes/Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/SampleUI;component/Themes/Accents/Blue.xaml" />
+                <ResourceDictionary>
+                    <SolidColorBrush x:Key="NormalColor" Color="#00A1DB"/>
+                    <SolidColorBrush x:Key="MouseOverColor" Color="#3CC3F5"/>
+                    <SolidColorBrush x:Key="IsPressedBrush" Color="#098CBC"/>
+                    <SolidColorBrush x:Key="DisableColor" Color="#808080"/>
 
-        <SolidColorBrush x:Key="NormalColor" Color="#00A1DB"/>
-        <SolidColorBrush x:Key="MouseOverColor" Color="#3CC3F5"/>
-        <SolidColorBrush x:Key="IsPressedBrush" Color="#098CBC"/>
-        <SolidColorBrush x:Key="DisableColor" Color="#808080"/>
-        
-        <Style TargetType="{x:Type Button}">
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="Opacity" Value="0.8"/>
-            <Setter Property="Background" Value="{DynamicResource NormalColor}"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border x:Name="border" CornerRadius="4" Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="border" Property="Background" Value="{DynamicResource MouseOverColor}"/>
-                            </Trigger>
+                    <Style x:Key="MetroButton" TargetType="{x:Type Button}">
+                        <Setter Property="Foreground" Value="White"/>
+                        <Setter Property="BorderThickness" Value="0"/>
+                        <Setter Property="BorderBrush" Value="Transparent"/>
+                        <Setter Property="Opacity" Value="0.8"/>
+                        <Setter Property="Background" Value="{DynamicResource NormalColor}"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border x:Name="border" CornerRadius="4" Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter TargetName="border" Property="Background" Value="{DynamicResource MouseOverColor}"/>
+                                        </Trigger>
 
-                            <Trigger Property="IsPressed" Value="True">
-                                <Setter TargetName="border" Property="Background" Value="{DynamicResource IsPressedBrush}"/>
-                            </Trigger>
+                                        <Trigger Property="IsPressed" Value="True">
+                                            <Setter TargetName="border" Property="Background" Value="{DynamicResource IsPressedBrush}"/>
+                                        </Trigger>
 
-                            <Trigger Property="IsEnabled" Value="False">
-                                <Setter TargetName="border" Property="Background" Value="{DynamicResource DisableColor}"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
+                                        <Trigger Property="IsEnabled" Value="False">
+                                            <Setter TargetName="border" Property="Background" Value="{DynamicResource DisableColor}"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
 
-                </Setter.Value>
-            </Setter>
-        </Style>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
