--- a/LoginSample/Views/LoginView.xaml
+++ b/LoginSample/Views/LoginView.xaml
@@ -1,17 +1,15 @@
-﻿<Window x:Class="LoginSample.Views.LoginView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:LoginSample.Hepler"
-        xmlns:ctrls="clr-namespace:SampleUI.Controls;assembly=SampleUI"
-        Title="LoginView" 
-        Height="360" 
-        Width="440"
-        SizeToContent="Height"
-        WindowStartupLocation="CenterScreen"
-        Topmost="True"
-        WindowStyle="None"
-        Loaded="LoginView_OnLoaded"
-        Closed="LoginView_OnClosed">
+﻿<ctrls:MetroWindow x:Class="LoginSample.Views.LoginView"
+                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                   xmlns:local="clr-namespace:LoginSample.Hepler"
+                   xmlns:ctrls="clr-namespace:SampleUI.Controls;assembly=SampleUI"
+                   Title="LoginView" 
+                   Height="360"    
+                   Width="440"
+                   SizeToContent="Height"
+                   WindowStartupLocation="CenterScreen"
+                   Topmost="True"
+                   ctrls:MetroWindow.IsCaptionBar="False">
     
     <Window.Resources>
         <!--converter-->
@@ -200,12 +198,20 @@
 
         <!--submit-->
         <Grid Grid.Row="4" Grid.Column="1">
-            <Button Name="BtnLogin" 
-                    Content="{Binding Path=LoginContent}" 
-                    Margin="3,0,3,5" 
+            <Button  Grid.ColumnSpan="2"
+                     Margin="3,0,3,5"
+                     Content="登录" 
+                     FontSize="15" 
+                     Style="{StaticResource MetroButton}"
+                     Visibility="{Binding Path=IsNotLogging, Converter={StaticResource BooleanToVisibilityConverter}}"
+                     Command="{Binding Path=LoginCmd}" />
+            <Button Grid.ColumnSpan="2"
+                    Margin="3,0,3,5"
+                    Content="取消" 
                     FontSize="15" 
-                    Grid.ColumnSpan="2"
-                    Command="{Binding Path=LoginCmd}" />
+                    Style="{StaticResource MetroButton}"
+                    Visibility="{Binding Path=IsLogging, Converter={StaticResource BooleanToVisibilityConverter}}"
+                    Command="{Binding Path=CancelCmd}" />
         </Grid>
 
         <!--login result-->
@@ -229,4 +235,4 @@
         </Grid>
 
     </Grid>
-</Window>
+</ctrls:MetroWindow>
