--- a/SampleUI/Themes/Generic.xaml
+++ b/SampleUI/Themes/Generic.xaml
@@ -2,6 +2,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/SampleUI;component/Themes/ResizeGrip.xaml"/>
         <ResourceDictionary Source="/SampleUI;component/Themes/CaptionButton.xaml"/>
+        <ResourceDictionary Source="/SampleUI;component/Themes/GlowWindow.xaml"/>
+        <ResourceDictionary Source="/SampleUI;component/Themes/MetroWindow.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
